--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "axios": "^1.4.0",
+        "country-state-city": "^3.2.1",
         "creeks": "^5.9.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
