--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "axios": "^1.4.0",
         "country-state-city": "^3.2.1",
         "creeks": "^5.9.2",
+        "date-fns": "^3.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
