--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@react-pdf/renderer": "^3.4.4",
         "axios": "^1.4.0",
         "country-state-city": "^3.2.1",
         "creeks": "^5.9.2",
         "date-fns": "^3.6.0",
+        "qrcode": "^1.5.3",
+        "qrcode.react": "^3.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
@@ -21,6 +24,7 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@types/axios": "^0.14.0",
         "@types/node": "^16.18.41",
+        "@types/qrcode": "^1.5.5",
         "@types/react": "^18.2.21",
         "@types/react-dom": "^18.2.7",
         "@types/styled-components": "^5.1.26",
