--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GENERATE_SOURCEMAP=false
 
-REACT_APP_baseURL=https://digitalmorocco-dev.vercel.app/
+# REACT_APP_baseURL=https://digitalmorocco-dev.vercel.app/
+
+REACT_APP_baseURL=http://localhost:5000/
+
+PEACR_APP_SERVICE_FEE = 2
