--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ REACT_APP_baseURL=https://digitalmorocco-dev.vercel.app/
 
 # REACT_APP_baseURL=http://localhost:5000/
 
-PEACR_APP_SERVICE_FEE = 2
+REACT_APP_SERVICEFEE=2
