--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-icons": "^4.10.1",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
+        "reactjs-popup": "^2.0.6",
         "sass": "^1.66.1",
         "save-dev": "^0.0.1-security",
         "styled-components": "^6.0.7"
