--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "country-state-city": "^3.2.1",
         "creeks": "^5.9.2",
         "date-fns": "^3.6.0",
+        "logrocket": "^8.1.0",
+        "logrocket-react": "^6.0.3",
         "qrcode": "^1.5.3",
         "qrcode.react": "^3.1.0",
         "react": "^18.2.0",
@@ -19,7 +21,8 @@
         "reactjs-popup": "^2.0.6",
         "sass": "^1.66.1",
         "save-dev": "^0.0.1-security",
-        "styled-components": "^6.0.7"
+        "styled-components": "^6.0.7",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
