--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GENERATE_SOURCEMAP=false
 
-REACT_APP_baseURL=https://digitalmorocco-dev.vercel.app/
+# REACT_APP_baseURL=https://digitalmorocco-dev.vercel.app/
 
-# REACT_APP_baseURL=http://localhost:5000/
+REACT_APP_baseURL=http://localhost:5000/
 
 REACT_APP_SERVICEFEE=2
